--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   cloud_firestore: ^6.1.1
   http: ^1.6.0
   image_picker: ^1.2.1
+  excel: ^4.0.6
+  path_provider: ^2.1.5
+  share_plus: ^12.0.1
+  cross_file: ^0.3.5+1
 
 dev_dependencies:
   flutter_test:
