--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path_provider: ^2.1.5
   share_plus: ^12.0.1
   cross_file: ^0.3.5+1
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
