--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   share_plus: ^12.0.1
   cross_file: ^0.3.5+1
   rxdart: ^0.28.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
